--- a/AutoBC/manifest.json
+++ b/AutoBC/manifest.json
@@ -1,8 +1,10 @@
 {
-  "manifest_version":2,
-  "name":"Twitch Auto BonusChest",
-  "version":"1.8",
-  "description":"自動でボーナスチェストをクリックする拡張機能です。",
+  "manifest_version": 2,
+  "version":"1.9",
+
+  "default_locale": "en",
+  "name": "Twitch Auto Bonuschest",
+  "description": "An extension that automatically clicks on bonus chests.",
 
   "icons": {
     "16": "img/icon.png",
@@ -21,7 +23,7 @@
 
  "browser_action": {
    "default_popup": "popup/popup.html",
-   "default_title": "ボーナスチェストを自動でクリック！"
+   "default_title": "Click on the bonus chest automatically!"
  },
 
  "background": {
